src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ActivityReportSent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>送信済</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AuModelChange__c</fullName>
        <label>機変(件)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AuNewFormula__c</fullName>
        <formula>AuNewMNP__c + AuNewTablet__c + AuNewRooter__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>新規(件)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AuNewMNP__c</fullName>
        <description>Request from customer (2018/05/30)
新規MNP（件）→ 新規合計（件）
新規タブレット（件）→ 新規ハンドセット（件）
新規ルーター（件）→ 新規MNP（件）</description>
        <label>新規：合計（件）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AuNewRooter__c</fullName>
        <description>Request from customer (2018/05/30)
新規MNP（件）→ 新規合計（件）
新規タブレット（件）→ 新規ハンドセット（件）
新規ルーター（件）→ 新規MNP（件）</description>
        <label>新規：新規MNP（件）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AuNewTablet__c</fullName>
        <description>Request from customer (2018/05/30)
新規MNP（件）→ 新規合計（件）
新規タブレット（件）→ 新規ハンドセット（件）
新規ルーター（件）→ 新規MNP（件）</description>
        <label>新規：新規ハンドセット（件）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AuNew__c</fullName>
        <label>新規(件)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AuTotal__c</fullName>
        <label>総販(件)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BBCCableTosu__c</fullName>
        <label>BBC:ケーブルトス(件)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BBCHikari__c</fullName>
        <label>BBC：ひかり(件)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCPHasAttachment__c</fullName>
        <formula>IF( OR ( auActivityRelated__r.IsHaveAttachmentFromEvent__c , auActivityRelated__r.HasAttachment__c ), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CCP添付ファイル有無</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSVExportPart1__c</fullName>
        <formula>IF(ISNULL(AuNewMNP__c), &quot;&quot;, TEXT(AuNewMNP__c)) + &quot;,&quot; +
IF(ISNULL(AuNewTablet__c), &quot;&quot;, TEXT(AuNewTablet__c)) + &quot;,&quot; +
IF(ISNULL(AuNewRooter__c), &quot;&quot;, TEXT(AuNewRooter__c)) + &quot;,&quot; +
IF(ISNULL(AuModelChange__c), &quot;&quot;, TEXT(AuModelChange__c)) + &quot;,&quot; +
IF(ISNULL(AuTotal__c), &quot;&quot;, TEXT(AuTotal__c)) + &quot;,&quot; +
IF(ISNULL(BBCHikari__c), &quot;&quot;, TEXT(BBCHikari__c)) + &quot;,&quot; +
IF(ISNULL(BBCCableTosu__c), &quot;&quot;, TEXT(BBCCableTosu__c)) + &quot;,&quot; +
IF(ISNULL(UQ_2__c), &quot;&quot;, TEXT(UQ_2__c)) + &quot;,&quot; +
IF(ISNULL(UQ_3__c), &quot;&quot;, TEXT(UQ_3__c)) + &quot;,&quot; +
IF(ISNULL(auDenki__c), &quot;&quot;, TEXT(auDenki__c)) + &quot;,&quot; +
IF(ISNULL(WALLET_Market__c), &quot;&quot;, TEXT(WALLET_Market__c)) + &quot;,&quot; +
IF(ISNULL(WaterServer__c), &quot;&quot;, TEXT(WaterServer__c)) + &quot;,&quot;</formula>
        <label>CSVExportPart1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSVExportPart2__c</fullName>
        <formula>IF(ISBLANK(OwnerDepartment__c), &quot;&quot;, &quot;\&quot;&quot; + SUBSTITUTE(OwnerDepartment__c, &quot;\&quot;&quot;, &quot;\&quot;\&quot;&quot;) + &quot;\&quot;&quot;) + &quot;,&quot; +
&quot;\&quot;&quot; + SUBSTITUTE(Owner:User.LastName, &quot;\&quot;&quot;, &quot;\&quot;\&quot;&quot;) + IF(ISNULL(Owner:User.FirstName), &quot;&quot;, &quot; &quot; + Owner:User.FirstName) + &quot;\&quot;,&quot; +
&quot;\&quot;&quot; + IF(ISNULL(Owner:User.KDDIEmployeeId__c), &quot;&quot;, &quot; &quot; + Owner:User.KDDIEmployeeId__c) + &quot;\&quot;,&quot; +
&quot;\&quot;&quot; + SUBSTITUTE(Owner:User.UserRole.Name, &quot;\&quot;&quot;, &quot;\&quot;\&quot;&quot;) + &quot;\&quot;,&quot; +
IF(TEXT(Type__c) == &quot;その他&quot;, &quot;\&quot;その他\&quot;&quot;, IF(ISBLANK(TEXT(Category__c)), &quot;&quot;, &quot;\&quot;&quot; + TEXT(Category__c) + &quot;\&quot;&quot;)) + &quot;,&quot; +
&quot;\&quot;&quot; + IF(IsPrivate, &quot;(非公開) &quot;, &quot;&quot;) + SUBSTITUTE(Subject, &quot;\&quot;&quot;, &quot;\&quot;\&quot;&quot;) + &quot;\&quot;,&quot; +
&quot;\&quot;&quot; + IF(ActivityReportSent__c, &quot;1&quot;, &quot;0&quot;) + &quot;\&quot;,&quot;</formula>
        <label>CSVExportPart2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSVExportPart3__c</fullName>
        <formula>&quot;\&quot;&quot; + IF(ISNULL(Account.ManagementCorpCode__c), &quot;&quot;, Account.ManagementCorpCode__c) + &quot;\&quot;,&quot; + 

&quot;\&quot;&quot; + IF(ISNULL(Account.PartnerCode__c), &quot;&quot;, Account.PartnerCode__c) + &quot;\&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CSVExportPart3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>カテゴリ</label>
        <picklist>
            <controllingField>Type__c</controllingField>
            <picklistValues>
                <fullName>拠点フォロー</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>代理店商談</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>イベント対応</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>異業種連携</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>他キャリア視察</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>サンプリング</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>移動</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>接待・接受</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>店長会議</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>会議・ミーティング</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>社内行事</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>資料作成・事務処理</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ヒアリング・アンケート</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>架電</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>資格試験</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>店舗研修</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EventHasAttachment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Event添付ファイル有無</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HearingAnswer__c</fullName>
        <label>ヒアリング回答</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HearingCategory__c</fullName>
        <label>ヒアリング項目</label>
        <picklist>
            <picklistValues>
                <fullName>AAA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BBB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCC</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Icon__c</fullName>
        <formula>IF( TEXT(Category__c) == &quot;拠点フォロー&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=015N0000000n9yK&quot;, &quot;A&quot;, 30, 30),
IF( TEXT(Category__c) == &quot;代理店商談&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=015N0000000n9yI&quot;, &quot;N&quot;, 25, 25),
IF( TEXT(Category__c)== &quot;イベント対応&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=015N0000000n9yG&quot;, &quot;E&quot;, 25, 25),
IF( TEXT(Category__c)== &quot;移動&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=015N0000000n9yJ&quot;, &quot;T&quot;, 25, 25),
IF( TEXT(Category__c)== &quot;店長会議&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=015N0000000n9yH&quot;, &quot;M&quot;, 25, 25),
IF( TEXT(Category__c)== &quot;会議・ミーティング&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=015N0000000n9yH&quot;, &quot;M&quot;, 25, 25),
IF( TEXT(Category__c)== &quot;社内イベント&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=015N0000000n9yG&quot;, &quot;E&quot;, 25, 25),
IMAGE(&quot;/servlet/servlet.FileDownload?file=015N0000000n9yF&quot;, &quot;他&quot;, 25, 25)
)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>アイコン</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerDepartment__c</fullName>
        <formula>Owner:User.Department</formula>
        <label>OwnerDepartment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartnerCode__c</fullName>
        <formula>Account__r.PartnerCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>代理店/法人/拠点コード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReportType__c</fullName>
        <globalPicklist>ReportType</globalPicklist>
        <label>報告種別</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>タイプ</label>
        <picklist>
            <picklistValues>
                <fullName>社外</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>社内</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>その他</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UQ_1__c</fullName>
        <label>UQモバイル：店舗全体(件)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UQ_1_formula__c</fullName>
        <formula>UQ_2__c  + UQ_3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UQモバイル：店舗全体(件)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UQ_2__c</fullName>
        <label>UQモバイル：auスタッフ直取(件)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UQ_3__c</fullName>
        <label>UQモバイル：UQ振り成約実績(件)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WALLET_Market__c</fullName>
        <label>WALLET Market(円)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WaterServer__c</fullName>
        <label>ウォーターサーバー(件)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>auActivityRelated__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>auActivityRelated</label>
        <referenceTo>auActivityRelated__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>auDenki__c</fullName>
        <label>auでんき(件)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cppIsCreate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>cppIsCreate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cppIsDelete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>cppIsDelete</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>